--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.8"
+    "mongoose": "^5.11.8",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
