A .env example file has been added to a new folder called /examples. Gitignore file was also updated.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,7 @@
 # all the dependencies for you.
 node_modules/
 
-# The .env file has the environment variables which hold secret information
-# such as database username/password, web API tokens and hash used for authentication.
-# Create your own .env file using the file /examples/.env-example changing the values
-# of the variables to your own. Then place your .env file at the root folder.
-# The package "dotenv" will get these variables and set to environment.
-# You'll be able to access the value of this variables using:
-# "process.env.VARIABLE_NAME" on your Node.js code
+
+# Create your own .env file using the file /examples/.env_example
+# Follow the instructions contained in teh example file.
 /.env
