Criado classe FormatHTMLTextInput e sua filha CJFInventoryNumberInput com o propósito de formatar o campo <input type='text'> de acordo com o formato de patrimônio utilizado pelo CJF. Além disso, algumas funções foram renomeadas e o código JavaScript começou a ser modularizado utilizando a diretiva import e export para separar tudo em vários arquivos.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # you run this application. The NPM package manager will install
 # all the dependencies for you.
 node_modules/
+backup/
 
 
 # Create your own .env file using the file /examples/.env_example
